# test-vision-systems

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/: app.py  conftest.py
src/apps/base/api/: serializers.py
src/apps/faces/: models.py  services.py
src/apps/faces/api/: resources.py  routing.py  schemas.py  serializers.py  validations.py
src/apps/faces/tests/: test_detecting_faces.py  test_uploading_image.py
src/config/: settings.py
src/database/: __init__.py  config.py
