[tool.poetry]
name = "test-vision-systems"
version = "0.1.0"
description = ""
authors = ["Ruslan <shaggybackend@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.1"
sqlalchemy = "^2.0.11"
pydantic = "^1.10.7"
flask-restful = "^0.3.9"
dlib = "^19.24.1"
numpy = "^1.24.3"
pillow = "^9.5.0"
opencv-python = "^4.7.0.72"
gunicorn = "^20.1.0"
flask-sqlalchemy = "^3.0.3"
flask-marshmallow = "^0.15.0"
marshmallow-sqlalchemy = "^0.29.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.1"
pytest = "^7.3.1"
mypy = "^1.2.0"
ruff = "^0.0.263"
pytest-flask = "^1.2.0"
pytest-sqlalchemy = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_db = "src.database:main"
runserver = "src.app:main"
